--- a/package.json
+++ b/package.json
@@ -5,32 +5,34 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.6.1",
-    "@mui/material": "^5.6.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.6.1",
     "@mui/lab": "^5.0.0-alpha.81",
+    "@mui/material": "^5.6.1",
     "@mui/system": "^5.6.4",
-    "sweetalert2": "^11.4.10",
-    "sweetalert2-react-content": "^5.0.0",
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@reduxjs/toolkit": "^1.8.2",
-    "axios": "^0.27.2",
-    "bootstrap": "^5.1.1",
     "antd": "^4.20.6",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.10.1",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.0.0-rc.0",
+    "react-bootstrap": "^2.6.0",
+    "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-sweet-progress": "^1.1.2",
     "react-toastify": "^9.1.1",
-    "formik": "^2.2.9",
-    "yup": "^0.32.11",
-    "web-vitals": "^2.1.4"
+    "sweetalert2": "^11.4.10",
+    "sweetalert2-react-content": "^5.0.0",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "export HTTPS=true&&SSL_CRT_FILE=cert.pem&&SSL_KEY_FILE=key.pem react-scripts start",
